# SingingVoiceDetection

./: .gitignore  README.md  SVAD.py  pyproject.toml  requirements.txt
results/: result1.txt
singing_voice_detection/: SVAD.py  __init__.py  cli.py  load_feature.py  model_SVAD.py
tests/: test_detect.py
tests/data/: .gitkeep
