[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singing-voice-detection"
version = "0.1.1"
description = "Detect singing voice segments in audio files"
authors = [ { name = "Original Authors" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tensorflow",
    "librosa",
    "numpy"
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
packages = ["singing_voice_detection"]
include-package-data = true

[tool.setuptools.package-data]
"singing_voice_detection" = ["weights/*.hdf5", "data/*.npy"]

[project.scripts]
svad-detect = "singing_voice_detection.cli:main"
